# nlp_miniprojects

./: .gitignore  README.md  pyproject.toml
scripts/: nltk_download_full.py
src/topic_extraction/: chapter_focus_analyzer.py
src/tutorials/: lda.py
