#===============================================================================
#                             BASIC CONFIGURATION
#===============================================================================
[project]
name = "nlp-miniprojects"
version = "0.1.0"
description = "A project that covers all simple one-file miniprojects related to nlp"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
  "ruff",
  "mypy",
  "pytest",
  "pytest-cov",
  "coverage",
  "pre-commit",
  "ipython"
]

nlp = [
    "nltk",
    "spacy",
    "gensim"
]

ml = [
    "pandas",
    "numpy"
]

stubs = [
    "pandas-stubs",
]
